token parsing strategy change

--- a/dashboard/popup.html
+++ b/dashboard/popup.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Token Tracker</title>
     <link rel="stylesheet" href="popup.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&family=Outfit:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -49,6 +43,7 @@
       </section>
 
       <footer class="footer">
+        <button class="btn-test" id="btn-test">Add 100 (test)</button>
         <button class="btn-clear" id="btn-clear">Clear Data</button>
       </footer>
     </div>
