--- a/dashboard/popup.html
+++ b/dashboard/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Token Tracker</title>
+    <title>sustAIn</title>
     <link rel="stylesheet" href="popup.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&family=Outfit:wght@400;500;600;700&display=swap"
@@ -12,10 +12,73 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
-        <h1>AI Token Tracker</h1>
-        <p class="tagline">Your environmental impact from AI usage</p>
-      </header>
+      <!-- Login screen (shown when not logged in) -->
+      <div id="login-screen" class="login-screen">
+        <header class="header">
+          <h1>sustAIn</h1>
+          <p class="tagline">Sign in to sync your usage</p>
+        </header>
+        <form id="login-form" class="auth-form">
+          <div class="form-group">
+            <label for="login-email">Email</label>
+            <input type="email" id="login-email" required placeholder="you@example.com" autocomplete="email" />
+          </div>
+          <div class="form-group">
+            <label for="login-password">Password</label>
+            <input type="password" id="login-password" required placeholder="••••••••" autocomplete="current-password" />
+          </div>
+          <div class="form-group">
+            <label for="api-url">API URL</label>
+            <input type="url" id="api-url" placeholder="https://your-api.com" autocomplete="off" />
+            <span class="form-hint">Your backend base URL (no trailing slash)</span>
+          </div>
+          <p id="auth-error" class="auth-error" hidden></p>
+          <button type="submit" class="btn btn-primary" id="btn-login">Log in</button>
+        </form>
+        <p class="auth-footer">
+          Don’t have an account? <button type="button" class="btn-link" id="btn-show-signup">Sign up</button>
+        </p>
+      </div>
+
+      <!-- Sign up screen -->
+      <div id="signup-screen" class="login-screen" hidden>
+        <header class="header">
+          <h1>sustAIn</h1>
+          <p class="tagline">Create an account</p>
+        </header>
+        <form id="signup-form" class="auth-form">
+          <div class="form-group">
+            <label for="signup-email">Email</label>
+            <input type="email" id="signup-email" required placeholder="you@example.com" autocomplete="email" />
+          </div>
+          <div class="form-group">
+            <label for="signup-password">Password</label>
+            <input type="password" id="signup-password" required placeholder="••••••••" autocomplete="new-password" minlength="6" />
+          </div>
+          <div class="form-group">
+            <label for="signup-api-url">API URL</label>
+            <input type="url" id="signup-api-url" placeholder="https://your-api.com" autocomplete="off" />
+          </div>
+          <p id="signup-error" class="auth-error" hidden></p>
+          <button type="submit" class="btn btn-primary" id="btn-signup">Sign up</button>
+        </form>
+        <p class="auth-footer">
+          Already have an account? <button type="button" class="btn-link" id="btn-show-login">Log in</button>
+        </p>
+      </div>
+
+      <!-- Dashboard (shown when logged in) -->
+      <div id="dashboard-screen" class="dashboard-screen" hidden>
+        <header class="header header-row">
+          <div>
+            <h1>sustAIn</h1>
+            <p class="tagline">Your environmental impact from AI usage</p>
+          </div>
+          <div class="user-badge">
+            <span id="user-email" class="user-email"></span>
+            <button type="button" class="btn-link btn-logout" id="btn-logout">Log out</button>
+          </div>
+        </header>
 
       <section class="impact-cards">
         <div class="card total-tokens">
@@ -45,6 +108,7 @@
       <footer class="footer">
         <button class="btn-clear" id="btn-clear">Clear Data</button>
       </footer>
+      </div>
     </div>
     <script src="popup.js"></script>
   </body>
