--- a/extension/dashboard/popup.html
+++ b/extension/dashboard/popup.html
@@ -27,11 +27,6 @@
             <label for="login-password">Password</label>
             <input type="password" id="login-password" required placeholder="••••••••" autocomplete="current-password" />
           </div>
-          <div class="form-group">
-            <label for="api-url">API URL</label>
-            <input type="url" id="api-url" placeholder="https://your-api.com" autocomplete="off" />
-            <span class="form-hint">Your backend base URL (no trailing slash)</span>
-          </div>
           <p id="auth-error" class="auth-error" hidden></p>
           <button type="submit" class="btn btn-primary" id="btn-login">Log in</button>
         </form>
@@ -55,10 +50,6 @@
             <label for="signup-password">Password</label>
             <input type="password" id="signup-password" required placeholder="••••••••" autocomplete="new-password" minlength="6" />
           </div>
-          <div class="form-group">
-            <label for="signup-api-url">API URL</label>
-            <input type="url" id="signup-api-url" placeholder="https://your-api.com" autocomplete="off" />
-          </div>
           <p id="signup-error" class="auth-error" hidden></p>
           <button type="submit" class="btn btn-primary" id="btn-signup">Sign up</button>
         </form>
@@ -67,7 +58,7 @@
         </p>
       </div>
 
-      <!-- Dashboard (shown when logged in) -->
+      <!-- Dashboard (stats) – shown when logged in -->
       <div id="dashboard-screen" class="dashboard-screen" hidden>
         <header class="header header-row">
           <div>
@@ -79,35 +70,31 @@
             <button type="button" class="btn-link btn-logout" id="btn-logout">Log out</button>
           </div>
         </header>
-
-      <section class="impact-cards">
-        <div class="card total-tokens">
-          <span class="card-label">Total Tokens</span>
-          <span class="card-value" id="total-tokens">0</span>
-        </div>
-        <div class="card co2">
-          <span class="card-label">Est. CO₂</span>
-          <span class="card-value" id="total-co2">0 g</span>
-        </div>
-        <div class="card equivalence">
-          <span class="card-label">Equivalent to</span>
-          <span class="card-value" id="equivalence">—</span>
-        </div>
-      </section>
-
-      <section class="by-provider">
-        <h2>By Platform</h2>
-        <div class="provider-grid" id="provider-grid"></div>
-      </section>
-
-      <section class="history">
-        <h2>Recent Activity</h2>
-        <div class="history-list" id="history-list"></div>
-      </section>
-
-      <footer class="footer">
-        <button class="btn-clear" id="btn-clear">Clear Data</button>
-      </footer>
+        <section class="impact-cards">
+          <div class="card total-tokens">
+            <span class="card-label">Total Tokens</span>
+            <span class="card-value" id="total-tokens">0</span>
+          </div>
+          <div class="card co2">
+            <span class="card-label">Est. CO₂</span>
+            <span class="card-value" id="total-co2">0 g</span>
+          </div>
+          <div class="card equivalence">
+            <span class="card-label">Equivalent to</span>
+            <span class="card-value" id="equivalence">—</span>
+          </div>
+        </section>
+        <section class="by-provider">
+          <h2>By Platform</h2>
+          <div class="provider-grid" id="provider-grid"></div>
+        </section>
+        <section class="history">
+          <h2>Recent Activity</h2>
+          <div class="history-list" id="history-list"></div>
+        </section>
+        <footer class="footer">
+          <button class="btn-clear" id="btn-clear">Clear local data</button>
+        </footer>
       </div>
     </div>
     <script src="popup.js"></script>
