should be final extension

--- a/extension/dashboard/popup.html
+++ b/extension/dashboard/popup.html
@@ -88,6 +88,9 @@
           <h2>By Platform</h2>
           <div class="provider-grid" id="provider-grid"></div>
         </section>
+        <footer class="footer">
+          <button class="btn-clear" id="btn-clear">Clear local data</button>
+        </footer>
       </div>
     </div>
     <script src="popup.js"></script>
