--- a/extension/dashboard/stats.html
+++ b/extension/dashboard/stats.html
@@ -52,6 +52,9 @@
           <div class="provider-grid" id="provider-grid"></div>
         </section>
 
+        <footer class="footer">
+          <button class="btn-clear" id="btn-clear">Clear local data</button>
+        </footer>
       </div>
     </div>
     <script src="stats.js"></script>
