Align extension popup theme and logo with website

--- a/extension/dashboard/stats.html
+++ b/extension/dashboard/stats.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sustAIn – Dashboard</title>
+    <title>SustAIn – Dashboard</title>
     <link rel="stylesheet" href="popup.css" />
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <style>
       body { padding: 24px; max-width: 560px; margin: 0 auto; }
       .dashboard-screen { display: block !important; }
@@ -17,13 +18,64 @@
     <div class="container">
       <div id="logged-out-view" class="logged-out-message hidden">
         <p>You're not signed in.</p>
-        <p>Open the sustAIn extension and log in or sign up to see your dashboard.</p>
+        <p>Open the SustAIn extension and log in or sign up to see your dashboard.</p>
       </div>
 
       <div id="dashboard-screen" class="dashboard-screen">
         <header class="header header-row">
           <div>
-            <h1>sustAIn</h1>
+            <div class="logo-mark" aria-label="SustAIn">
+              <svg viewBox="0 0 190 50" width="190" height="50" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                  <filter id="water-shimmer">
+                    <feTurbulence type="fractalNoise" baseFrequency="0.02 0.1" numOctaves="2" result="noise">
+                      <animate attributeName="baseFrequency" values="0.02 0.1; 0.025 0.12; 0.02 0.1" dur="4s" repeatCount="indefinite" />
+                    </feTurbulence>
+                    <feColorMatrix type="hueRotate" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 0.5 0" />
+                    <feDisplacementMap in="SourceGraphic" in2="noise" scale="2" xChannelSelector="R" yChannelSelector="G" />
+                  </filter>
+                  <linearGradient id="wave-gradient-1" x1="0" x2="0" y1="0" y2="1">
+                    <stop offset="0%" stop-color="#3b82f6" />
+                    <stop offset="100%" stop-color="#1e3a8a" />
+                  </linearGradient>
+                  <linearGradient id="wave-gradient-2" x1="0" x2="0" y1="0" y2="1">
+                    <stop offset="0%" stop-color="#60a5fa" stop-opacity="0.8" />
+                    <stop offset="100%" stop-color="#2563eb" stop-opacity="0.9" />
+                  </linearGradient>
+                  <linearGradient id="water-highlight" x1="0" x2="0" y1="0" y2="1">
+                    <stop offset="0%" stop-color="#ffffff" stop-opacity="0.7" />
+                    <stop offset="30%" stop-color="#ffffff" stop-opacity="0.1" />
+                    <stop offset="100%" stop-color="#ffffff" stop-opacity="0" />
+                  </linearGradient>
+                  <pattern id="wave-pattern" width="100" height="50" patternUnits="userSpaceOnUse" x="0" y="0">
+                    <rect width="100" height="50" fill="#bfdbfe" />
+                    <path d="M0,25 C15,15 35,35 50,25 C65,15 85,35 100,25 L100,50 L0,50 Z" fill="url(#wave-gradient-2)">
+                      <animateTransform attributeName="transform" type="translate" values="0,0; -50,0" dur="4s" repeatCount="indefinite" />
+                    </path>
+                    <path d="M50,25 C65,15 85,35 100,25 C115,15 135,35 150,25 L150,50 L50,50 Z" fill="url(#wave-gradient-2)">
+                      <animateTransform attributeName="transform" type="translate" values="0,0; -50,0" dur="4s" repeatCount="indefinite" />
+                    </path>
+                    <path d="M0,28 C20,38 30,18 50,28 C70,38 80,18 100,28 L100,50 L0,50 Z" fill="url(#wave-gradient-1)">
+                      <animateTransform attributeName="transform" type="translate" values="0,0; -50,0" dur="2.5s" repeatCount="indefinite" />
+                    </path>
+                    <path d="M50,28 C70,38 80,18 100,28 C120,38 130,18 150,28 L150,50 L50,50 Z" fill="url(#wave-gradient-1)">
+                      <animateTransform attributeName="transform" type="translate" values="0,0; -50,0" dur="2.5s" repeatCount="indefinite" />
+                    </path>
+                  </pattern>
+                  <clipPath id="ai-clip">
+                    <text x="0" y="40" font-family="Inter, system-ui, sans-serif" font-weight="800" font-size="42">AI</text>
+                  </clipPath>
+                </defs>
+                <g font-family="Inter, system-ui, sans-serif" font-weight="800" font-size="42">
+                  <text x="0" y="40" fill="#0f172a" letter-spacing="-1">Sust</text>
+                  <g transform="translate(94, 0)">
+                    <rect x="0" y="0" width="50" height="50" fill="url(#wave-pattern)" clip-path="url(#ai-clip)" filter="url(#water-shimmer)" />
+                    <rect x="0" y="0" width="50" height="50" fill="url(#water-highlight)" clip-path="url(#ai-clip)" style="mix-blend-mode: overlay;" />
+                  </g>
+                  <text x="140" y="40" fill="#0f172a" letter-spacing="-1">n</text>
+                </g>
+              </svg>
+            </div>
             <p class="tagline">Your environmental impact from AI usage</p>
           </div>
           <div class="user-badge">
